--- a/tutorial_03/src/views/dashboard.ejs
+++ b/tutorial_03/src/views/dashboard.ejs
@@ -1,4 +1,3 @@
 <%- include('partials/header'); %>
-    <h1>pagina con express</h1>
-    <h2><%= title %></h2>
+<h1>Dashboard EJS</h1>
 <%- include('partials/footer'); %>
