--- a/tutorial_03/src/views/users.ejs
+++ b/tutorial_03/src/views/users.ejs
@@ -1,4 +1,3 @@
 <%- include('partials/header'); %>
-    <h1>pagina con express</h1>
-    <h2><%= title %></h2>
+<h1>Users page</h1>
 <%- include('partials/footer'); %>
