--- a/tutorial_05/vistas/index.pug
+++ b/tutorial_05/vistas/index.pug
@@ -3,3 +3,8 @@ html
         title=titulo
     body 
         p=dato
+        div.container
+            input(type="text" placeholder="nombre" id="nombre")
+            input(type="text" placeholder="numero" id="numero")
+            button(id="btn_agregar") agregar contacto
+    script(src="funciones.js") 
