--- a/tutorial_05/vistas/index.pug
+++ b/tutorial_05/vistas/index.pug
@@ -7,5 +7,6 @@ html
             input(type="text" placeholder="nombre" id="nombre")
             input(type="text" placeholder="numero" id="numero")
             button(id="btn_agregar") agregar contacto
-
+            each contacto in contactos
+                p= `${contacto.id_agenda} -- ${contacto.nombre_contacto}`
     script(src="funciones.js") 
