--- a/tutorial_06/client/src/style.scss
+++ b/tutorial_06/client/src/style.scss
@@ -1,10 +1,16 @@
 $lightGreen: #b9e7e7;
 
 .app{
-
+    display: flex;
+    justify-content: center;
 
     .container{
+        width: 1024px;
 
+        .link{
+            text-decoration: none;
+            color: inherit;
+        }
 
         // LOGIN & REGISTER
 
@@ -54,6 +60,26 @@ $lightGreen: #b9e7e7;
                     font-size: 12px;
                     text-align: center;
                 }
+            }
+        }
+
+        // NAVBAR
+
+        .navbar{
+
+            .container{
+                padding: 10px 0px;
+                display: flex;
+                justify-content: space-between;
+                .logo{
+
+                }
+
+                .links{
+                    display: flex;
+                    gap: 10px;
+                }
+
             }
         }
     }
