--- a/tutorial_06/client/src/style.scss
+++ b/tutorial_06/client/src/style.scss
@@ -70,16 +70,28 @@ $lightGreen: #b9e7e7;
             .container{
                 padding: 10px 0px;
                 display: flex;
+                align-items: center;
                 justify-content: space-between;
                 .logo{
-
+                    img{
+                        width: 120px;
+                    }
                 }
 
                 .links{
                     display: flex;
+                    align-items: center;
                     gap: 10px;
-                }
 
+                    h6{
+                        font-size: 16px;
+                        font-weight: 300;
+                    }
+
+                    span{
+                        cursor: pointer;
+                    }
+                }
             }
         }
     }
