--- a/pyt_crash_course/learning_log/learning_logs/templates/learning_logs/topic.html
+++ b/pyt_crash_course/learning_log/learning_logs/templates/learning_logs/topic.html
@@ -6,11 +6,12 @@
 
 <p>Entries: </p>
 
+<p><a href="{% url 'new_entry' topic.id %}">add new entry</a></p>
+
 <ul>
     {% for entry in entries %}
     <li>
-        <p>{{ entry.date_added|date:'M d, y H:i' }}</p><br>
-        <p>{{ entry.text|linebreaks }}</p>
+        <p>{{ entry.date_added|date:'M d, y H:i' }} - {{ entry.text }}</p>
     </li>
     {% empty %}
         <li>
