--- a/pyt_crash_course/learning_log/users/templates/users/login.html
+++ b/pyt_crash_course/learning_log/users/templates/users/login.html
@@ -2,17 +2,23 @@
 
 {% block content %}
 
-{% if form.errors %}
-<p>Tu usuario y password no coinciden. Intenta nuevamente</p>
-{% endif %}
-
-<form action="{% url 'users:login' %}" method="post">
-    {% csrf_token %}
-    {{ form.as_p }}
-
-    <button name="submit">log in</button>
-
-    <input type="hidden" name="next" value="{% url 'learning:index' %}" />
-</form>
+<div class="center">
+    <form method="post" class="card" novalidate>
+        {% csrf_token %}
+      <h2 class="text-center">Log in to your account</h2>
+      {% for field in form %}
+              {{ field.label_tag }} 
+              {{ field }}
+              {% if field.errors %}
+                  <small>{{ field.errors|striptags }}</small> 
+              {% endif %}
+      {% endfor %}
+      
+      <input type="submit" value="Login" class="btn btn-primary full-width">
+      <hr>
+      <p class="text-center">Forgot your password <a href="#">Reset Password</a></p>
+      <p class="text-center">Don't have a account? <a href="#">Join Now</a></p>
+  </form>
+</div>
 
 {% endblock content %}
