--- a/pyt_crash_course/learning_log/learning_logs/templates/learning_logs/base.html
+++ b/pyt_crash_course/learning_log/learning_logs/templates/learning_logs/base.html
@@ -2,6 +2,11 @@
     <a href="{% url 'index' %}">Learning Log</a>
     <br>
     <a href="{% url 'topics' %}">Topics</a>
+    {% if user.is_authenticated %}
+    Hello, {{ user.username }}
+    {% else %}
+    <a href="{% url 'login' %}">log in</a>
+    {% endif %}
 </p>
 
 {% block content %}{% endblock content %}
