--- a/pyt_crash_course/learning_log/learning_logs/templates/learning_logs/base.html
+++ b/pyt_crash_course/learning_log/learning_logs/templates/learning_logs/base.html
@@ -1,12 +1,12 @@
 <p>
-    <a href="{% url 'index' %}">Learning Log</a>
-    <br>
-    <a href="{% url 'topics' %}">Topics</a>
+    <a href="{% url 'index' %}">Learning Log</a><br>
+    <a href="{% url 'topics' %}">Topics</a><br>
     {% if user.is_authenticated %}
     Hello, {{ user.username }}
-    <a href="{% url 'logout' %}">log out</a>
+    <a href="{% url 'logout' %}">log out</a><br>
     {% else %}
-    <a href="{% url 'login' %}">log in</a>
+    <a href="{% url 'register' %}">register</a><br>
+    <a href="{% url 'login' %}">log in</a><br>
     {% endif %}
 </p>
 
